[package]
name = "anne-key"
description = "Firmware for Anne Pro Keyboard"
repository = "https://github.com/ah-/anne-key"
keywords = ["no-std", "arm", "cortex-m", "anne", "pro", "keyboard"]
categories = ["embedded", "no-std"]
authors = ["Andreas Heider <andreas@heider.io>"]
license = "Apache-2.0"
version = "0.0.2"

[dependencies]
bare-metal = "0.1.1"
bit_field = "0.9.0"
cortex-m = "0.4.3"
cortex-m-rt = "0.4"
cortex-m-semihosting = "0.2.0"
cortex-m-rtfm = "0.3.1"
nb = "0.1.1"
vcell = "0.1.0"

[features]
default = ["panic-abort"]
use_semihosting = ["panic-semihosting"]

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.1.0"

[dependencies.stm32l1]
features = ["stm32l151", "rt"]
version = "0.1.1"

[dependencies.stm32l151-hal]
version = "0.2.0"

[dependencies.panic-abort]
version = "0.1.0"
optional = true

[dependencies.panic-semihosting]
version = "0.1.0"
optional = true

[profile.release]
debug = true
lto = true
opt-level = 3

[profile.dev]
debug = true
lto = false
opt-level = 3
